@@ -5593,63 +5593,69 @@ string line 2\"
           ( img^jpg:(img^jpg)^?n&1:!n
           | Out$886
           )
-          (     "[\r
-    {\r
-        \"a\": \"b\\\"\",\r
-        \"d\\\\\": \"e\",\r
-        \"g\\/\": {\r
-            \"\\/x\\b\\f\\n\\r\\t\": {}\r
-        }\r
-    },\r
-    \"A	\",\r
-    [\r
-        \"x\",\r
-        \"t\"\r
-    ],\r
-    \"B\",\r
-    [],\r
-    [\r
-        \"y\",\r
-        \"z\",\r
-        \"o\"\r
-    ],\r
-    \"true\",\r
-    true,\r
-    false,\r
-    3.4,\r
-    0.00987654321 ,\r
-    0e0,\r
-    0.0000006e+007,\r
-    0.0000006e-007,\r
-    56.78,\r
-    56.780,\r
-    -0,\r
-    0,\r
-    -1,\r
-    286E4,\r
-    17E123,\r
-    17.87E123,\r
-    0.87E123,\r
-    17E123,\r
-	10.01,\r
-    -286E4,\r
-    -17E123,\r
-    -17.87E123,\r
-    -0.87E123,\r
-    -17E123,\r
-	-10.01,\r
-	0.123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789    ,\r
-	1234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567.89123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789    ,\r
-	null,\r
-    \"I \\u042F je \\u044f\"\r
-]\r
-\r
-\r
+          (     "[{},{},    
+    {    
+        \"a\": \"b\\\"\",    
+        \"d\\\\\": \"e\",    
+        \"g\\/\": {    
+            \"\\/x\\b\\f\\n\\r\\t\": {}    
+        }    
+    },    
+    \"A	\",    
+    [    
+        \"x\",    
+        \"t\"    
+    ],    
+    \"B\",    
+    [],    
+    [    
+        \"y\",    
+        \"z\",    
+        \"o\"    
+    ],    
+    \"true\",    
+    true,    
+    false,    
+    3.4,    
+    0.00987654321 ,    
+    0e0,    
+    0.0000006e+007,    
+    0.0000006e-007,    
+    56.78,    
+    56.780,    
+    -0,    
+    0,    
+    -1,    
+    286E4,    
+    17E123,    
+    17.87E123,    
+    0.87E123,    
+    17E123,    
+	10.01,    
+    -286E4,    
+    -17E123,    
+    -17.87E123,    
+    -0.87E123,    
+    -17E123,    
+	-10.01,    
+	0.123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789    ,    
+	1234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567.89123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789    ,    
+	null,    
+    \"I \\u042F je \\u044f\"    
+]    
+    
+    
    "
               : ?jsontest
             &   get$(!jsontest,MEM,JSN)
               : ( 
-                ,   (a..b\")+("d\\"..e)+(g/."/x\b\f\n\r\t".)
+                ,   (0,)
+                    (0,)
+                    (   (a..b\")
+                      + ("d\\"..e)
+                      + (g/.("/x\b\f\n\r\t".0,),)
+                    , 
+                    )
                     (.A\t)
                     (,(.x) (.t))
                     (.B)
@@ -5688,7 +5694,7 @@ string line 2\"
           | Out$887
           )
           (   jsn$(get$(!jsontest,MEM,JSN))
-            : "[{\"a\":\"b\\\"\",\"d\\\\\":\"e\",\"g/\":{\"/x\\b\\f\\n\\r\\t\":{}}},\"A\\t\",[\"x\",\"t\"],\"B\",[],[\"y\",\"z\",\"o\"],\"true\",true,false,3.4,0.00987654321,0,6,0.00000000000006,56.78,56.78,-0,0,-1,2860000,17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,17870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,10.01,-2860000,-17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-17870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-10.01,0.123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789,1234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567.89123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789,null,\"I Я je я\"]"
+            : "[{},{},{\"a\":\"b\\\"\",\"d\\\\\":\"e\",\"g/\":{\"/x\\b\\f\\n\\r\\t\":{}}},\"A\\t\",[\"x\",\"t\"],\"B\",[],[\"y\",\"z\",\"o\"],\"true\",true,false,3.4,0.00987654321,0,6,0.00000000000006,56.78,56.78,-0,0,-1,2860000,17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,17870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,10.01,-2860000,-17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-17870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-870000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-17000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000,-10.01,0.123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789,1234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567891234567.89123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789123456789,null,\"I Я je я\"]"
           | Out$888
           )
           ( jsn$123/4567:"2.69323407050580249617E-2"
